# Universal-Transformer-Pytorch

./: main.py  pyproject.toml
models/: UTransformer.py
